# saved-ai-bot

./: .gitignore  1001_2024-12-26_01-28-51.txt  1001_2024-12-26_01-33-16.txt  admin.py  backend.py  bot.py  clear_pinecone.py  db.sqlite3-shm  db.sqlite3-wal  debug.ipynb  dump.rdb  expore_tg_json.ipynb  generate_schema.py  hello.py  models.py  parse_telegram_json_cli_csv.py  parse_telegram_json_polars.py  pyproject.toml  test_backend.py  test_schema.py  text_tools.py
tests/: test_backend_search.py  test_backend_upload.py  test_schema.py  test_start_kb_chat.py
